@@ -152,6 +152,13 @@ didl_lite_object_get_upnp_class (DIDLLiteObject *object)
 }
 
 char *
+didl_lite_object_get_upnp_class_name (DIDLLiteObject *object)
+{
+        return xml_util_get_child_element_content (object->priv->element,
+                                                   "class");
+}
+
+char *
 didl_lite_object_get_id (DIDLLiteObject *object)
 {
         return xml_util_get_attribute_contents (object->priv->element, "id");
